updated 7 and 8 upto FV bib

--- a/mybib.bib
+++ b/mybib.bib
@@ -668,3 +668,10 @@ using a large dataset of {CAD} models",
    booktitle = cvpr,
    year = "2014",
 } 
+
+@Book{scholkopf2002learning,
+  title={Learning with kernels},
+  author={Scholkopf, Bernhard and Smola, Alex},
+  year={2002},
+  publisher={MIT press, Cambridge}
+}
